example-3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-3
  labels:
    app: example-3
spec:
  selector:
    app: example-3
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
